# leadgen

./: .env  .env.example  README.md  pyproject.toml  requirements.txt
src/leadgen/: crew.py  main.py
src/leadgen/config/: agents.yaml  tasks.yaml
