[project]
name = "leadgen"
version = "0.1.0"
description = "leadgen using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
leadgen = "leadgen.main:run"
run_crew = "leadgen.main:run"
train = "leadgen.main:train"
replay = "leadgen.main:replay"
test = "leadgen.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
